--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-Django~=5.1.7
+Django~=5.1.8
 djangorestframework~=3.15.2
 djangorestframework-simplejwt~=5.5.0
 requests~=2.32.3
+groundwork-sphinx-theme
